# WBeam

./: .gitignore  .gitlab-ci.yml  AGENTS.md  ALL_CODE.txt  EVDI_SETUP_INDEX.md  README.md  RUST_STREAMER_FIX.md  audodaignose  backend.md  buildlog  concat.sh  deploy-android-all.sh  desktop.sh  devtool  docker-compose.sonarqube.yml  fw  gitlab.runners.md  install-deps  installnvim  instruct.txt  issues.md  next.md  package-lock.json  progress.md  prompt.md  proto  proto_x11  redeploy-local  redeploy_local  redeply_local  reset.sh  runas-remote  solid.md  sonar-project.properties  sonar.issues.md  start-local-session  start-remote  task.md  test.cs  today.md  (+14 more)
host/rust/: .gitignore  Cargo.toml
host/rust/config/: presets.toml  runtime_state.serial-DM7S55KRBQEQU4VO.json  runtime_state.serial-HVA6PKNT.json
host/rust/crates/wbeamd-api/: Cargo.toml
host/rust/crates/wbeamd-api/src/: lib.rs
host/rust/crates/wbeamd-core/: Cargo.toml  build.rs
host/rust/crates/wbeamd-core/src/: lib.rs
host/rust/crates/wbeamd-core/src/domain/: policy.rs  state.rs
host/rust/crates/wbeamd-core/src/infra/: adb.rs  config_store.rs  host_probe.rs  mod.rs  process.rs  telemetry.rs  x11_extend.rs  x11_monitor_object.rs  x11_real_output.rs
host/rust/crates/wbeamd-core/src/infra/display_backends/: mod.rs
host/rust/crates/wbeamd-core/src/infra/x11_backend/: mod.rs
host/rust/crates/wbeamd-core/src/resolver/: client_caps.rs  profile_selector.rs
host/rust/crates/wbeamd-core/src/resolver/policy/: api17.rs  api21.rs  modern.rs
host/rust/crates/wbeamd-server/: Cargo.toml
host/rust/crates/wbeamd-server/src/: main.rs
host/rust/crates/wbeamd-server/src/server/: kscreen_layout.rs  mod.rs  routes.rs  runtime_utils.rs  session_registry.rs  trainer_dataset_service.rs  trainer_handlers.rs  trainer_models.rs  trainer_process.rs  trainer_support.rs
host/rust/crates/wbeamd-streamer/: Cargo.toml  build.rs
host/rust/crates/wbeamd-streamer/src/: capture.rs  cli.rs  encoder.rs  main.rs  pipeline.rs  transport.rs
host/rust/crates/wbeamd-streamer/src/backend/: x11.rs
host/rust/crates/wbeamd-streamer/src/capture/: mod.rs  portal.rs
host/rust/crates/wbeamd-streamer/src/encode/: h264.rs  h265.rs  mod.rs  rawpng.rs  selector.rs
host/rust/crates/wbeamd-streamer/src/encoder/: h265.rs  mod.rs
host/rust/crates/wbeamd-streamer/src/packetize/: mod.rs
host/rust/crates/wbeamd-streamer/src/pipeline/: builder.rs  mod.rs  profile.rs
host/rust/crates/wbeamd-streamer/src/transport/: mod.rs  sender.rs
host/rust/crates/wbeamd-tuner/: Cargo.toml
host/rust/crates/wbeamd-tuner/src/: main.rs
host/rust/logs/runs/20260219-085725/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-085822/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-085827/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-085956/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-090108/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-090135/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-090358/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-090611/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-090821/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-091034/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-091245/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-092218/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-092503/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-092708/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-092759/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-092837/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-092928/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-131522/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-132648/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-134239/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-134306/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-135140/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-135745/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-140213/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-140630/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-140653/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-142418/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-143112/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-150553/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-150859/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-152204/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-162959/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-163801/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-164332/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-164436/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-164503/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-164518/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-172931/: wbeamd-rust.log.2026-02-19
host/rust/logs/runs/20260219-174613/: wbeamd-rust.log.2026-02-19
host/rust/scripts/: install_systemd_user.sh  run_wbeamd_rust.sh  test_matrix.sh
host/rust/systemd/: wbeamd-rust.service.template
proto/front/app/src/main/cpp/: CMakeLists.txt  native_wbeam.cpp
protocol/rust/crates/wbtp-host/: Cargo.toml
protocol/rust/crates/wbtp-host/src/: lib.rs
protocol/rust/crates/wbtp-sender/: Cargo.toml
protocol/rust/crates/wbtp-sender/src/: lib.rs  main.rs
shared/protocol/rust/crates/wbtp-receiver-null/: Cargo.toml
src/apps/desktop-tauri/backend/: Cargo.toml  tauri.conf.json
src/apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/apps/desktop-tauri/src-tauri/src/: main.rs
src/host/rust/crates/wbeamd-core/: Cargo.toml  build.rs
src/host/rust/crates/wbeamd-core/src/: lib.rs
src/protocol/rust/: Cargo.toml
src/protocol/rust/crates/wbtp-core/: Cargo.toml
src/protocol/rust/crates/wbtp-sender/src/: lib.rs
(+1155 files in other folders)
