[workspace]
members = [
  "crates/wbeamd-api",
  "crates/wbeamd-core",
  "crates/wbeamd-server",
  "crates/wbeamd-streamer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.30", features = ["fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hostname = "0.4"
