[workspace]
members = [
    "crates/wbtp-core",
    "crates/wbtp-sender",
    "crates/wbtp-receiver-null",
    "crates/wbtp-host",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
wbtp-core = { path = "crates/wbtp-core" }

bytes     = "1.9"
crc32fast = "1.4"
tokio     = { version = "1.48", features = ["full"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0"
clap      = { version = "4.5", features = ["derive"] }
