[package]
name = "wbeamd-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wbeamd-api = { path = "../wbeamd-api" }
wbeamd-core = { path = "../wbeamd-core" }
