[package]
name = "wbeamd-streamer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
ashpd = { version = "0.7", default-features = false, features = ["tokio"] }
clap = { workspace = true, features = ["derive"] }
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, optional = true }
byteorder = "1"
rand = "0.8"
bytes = "1"
libc = "0.2"
wbtp-core = { path = "../../../../shared/protocol/rust/crates/wbtp-core" }

[features]
default = []
