[package]
name = "wbeamd-tuner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
ratatui.workspace = true
crossterm.workspace = true
rand.workspace = true
