[package]
name = "wbtp-sender"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wbtp-sender"
path = "src/main.rs"

[dependencies]
wbtp-core  = { workspace = true }
bytes      = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror  = { workspace = true }
clap       = { workspace = true }
