[package]
name = "wbeam-desktop-tauri"
version = "0.1.0"
edition = "2021"
description = "WBeam desktop app (Tauri + Solid + TypeScript baseline)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
