[package]
name = "wbeam-desktop-tauri"
version = "0.1.0"
edition = "2021"
description = "Alternative desktop UI shell built with Tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
